data/src/test/resources/com/linkedin/data/schema/annotation/denormalizedsource/invalid/3_3_cyclic_invalid_complex.pdl
namespace com.linkedin.data.schema.annotation.denormalizedsource.invalid

record Test {
  a: record employer {
    @customAnnotation = {
      "/*/name" : "OVERRIDE1"
    }
    employeeMap: map[string, employer]

    @customAnnotation = "none"
    name:string
  }
}
